# kattilakioski

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.example.yml  docker-compose.production.yml  docker-compose.yml  index.html  notes.md  package.json  tests.sh  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: deploy.yml  test.yml
frontend/: App.svelte  api.js  api.svelte.ts  api.ts  globals.svelte.ts  index.html  types.ts
frontend/lib/: Admin.svelte  ItemCard.svelte  ItemListing.svelte  Login.svelte  MainBanner.svelte  MainDialog.svelte  Sell.svelte  User.svelte
frontend/theme/: _smui-theme.scss
migrations/2024-11-17-130938_create_users/: up.sql
migrations/2024-11-28-172232_create_items/: up.sql
migrations/2024-12-11-191711_create_attachments/: up.sql
migrations/2024-12-15-100520_create_transactions/: up.sql
migrations/2025-02-27-140510_append_seller_to_transactions/: down.sql  up.sql
migrations/2025-02-27-214549_append_amount_to_transactions/: down.sql  up.sql
src/: api.rs  cron.rs  main.rs  models.rs  schema.rs
src/api/: admin.rs  attachment.rs  item.rs  transactions.rs  user.rs  validation.rs
test-runner/: tests.sh
