[package]
name = "kattilakioski"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9"
actix-files = "0.6"
diesel = { version = "2.2", features = ["chrono"] }
diesel-async = { version = "0.5", features = ["pool", "bb8", "postgres"] }
pretty_env_logger = "0.5"
chrono = "0.4"
