[package]
name = "kattilakioski"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9"
actix-files = "0.6"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-multipart = "0.7"
diesel = { version = "2.2", features = ["chrono"] }
diesel-async = { version = "0.5", features = ["pool", "bb8", "postgres"] }
pretty_env_logger = "0.5"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
blake3 = "1.5"
log = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json", "cookies"] }
futures = "0.3"
rand = "0.8"
image = { version = "0.25", default-features = false }
webp = "0.3"
async-fs = "2.1"
