[package]
name = "kattilakioski"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9"
actix-files = "0.6"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-multipart = "0.7"
diesel = { version = "2.2", features = ["chrono", "postgres"] }
diesel-async = { version = "0.5", features = ["pool", "bb8", "postgres"] }
diesel_migrations = "2.2"
pretty_env_logger = "0.5"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
blake3 = "1.6"
log = "0.4"
futures = "0.3"
rand = "0.9"
image = "0.25"
webp = "0.3"
async-fs = "2.1"
itertools = "0.14"
tokio = { version = "1.43", features = ["macros"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures-util = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking", "json", "cookies", "stream", "multipart"] }
temp-dir = "0.1"
